--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			<h1 class="characters__title">Star Wars</h1>
 			<h2 class="characters__subtitle">Caharacters</h2>
 			<ul id="characters-list"></ul>
-			<div id="pagination">
-				<button id="prev-page-btn" disabled class="btn">Назад</button>
-				<button id="next-page-btn" class="btn">Вперед</button>
+			<div id="pagination" class="characters__btn">
+				<button id="prev-page-btn" disabled class="btn">Prev</button>
+				<button id="next-page-btn" class="btn">Next</button>
 			</div>
 		</div>
 
