--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 			</table>
 			<button id="back-to-list-btn" class="btn">Back to list</button>
 		</div>
+
+		<div class="copy">
+			<p class="copy__text">&#169; Designed by Nesta</p>
+		</div>
 	</div>
 
 	<script src="./js/app.js"></script>
