--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<tr id="character-details-row"></tr>
 				</tbody>
 			</table>
-			<button id="back-to-list-btn" class="btn">Back to list</button>
+			<div class="btn-back"><button id="back-to-list-btn" class="btn">Back to list</button></div>
 		</div>
 
 		<div class="copy">
